--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8081
 
+
+spring.datasource.url=${DATABASE_URL}
+
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
