--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# NOME APLICACAO - LEMBRAR DE NAO COLOCAR ASPAS
+spring.application.name=fornecedor
+
+eureka.client.register-with-eureka= true
+eureka.client.fetch-registry= true
+eureka.client.service-url.defaultZone: http://localhost:8761/eureka
