Recuperando configuracoes do config server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8081
 
-
 # NOME APLICACAO - LEMBRAR DE NAO COLOCAR ASPAS
+# ESSE NOME E O MESMO NOME DO ARQUIVO DE CONFIGURACAO MAPEADO NO CONFIG SERVER
 spring.application.name=fornecedor
+spring.profiles.active=default
+# ESSA CONFIGURACAO PRECISA SER CARREGADA PELO FATO DO HIBERNATE CARREGAR AS INFORMACOES LOGO DE CARA
+# DESSA FORMA FAZEMOS QUE AS INFORMACOES DO DATABASE SEJA RECUPERADA ANTES
+spring.config.import=configserver:http://localhost:8888
 
 eureka.client.register-with-eureka= true
 eureka.client.fetch-registry= true
