--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8081
-
 # NOME APLICACAO - LEMBRAR DE NAO COLOCAR ASPAS
 # ESSE NOME E O MESMO NOME DO ARQUIVO DE CONFIGURACAO MAPEADO NO CONFIG SERVER
 spring.application.name=fornecedor
@@ -11,3 +10,6 @@ spring.config.import=configserver:http://localhost:8888
 eureka.client.register-with-eureka= true
 eureka.client.fetch-registry= true
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka
+
+# RECUPERAR AS INFOS DO USUARIO
+security.oauth2.resource.user-info-uri=http://localhost:8088/user
